<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:orientation="vertical">

            <EditText
                android:id="@+id/data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/logo"
                android:hint="@string/hint_input" />

            <EditText
                android:id="@+id/result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/data"
                android:hint="@string/hint_result" />

            <Button
                android:id="@+id/btnswap"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/action_swap" />

            <Button
                android:id="@+id/btnshare"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/action_share" />

            <Button
                android:id="@+id/btnlist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/action_list" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
